[gd_scene load_steps=15 format=3 uid="uid://7c4smtyjcn3m"]

[ext_resource type="Script" uid="uid://bsem5idjweei8" path="res://src/stages/game/dyad_game/ui/player/player_ui.gd" id="1_00vx3"]
[ext_resource type="Texture2D" uid="uid://cv2vkapkd35gr" path="res://assets/gfx/entities/player1.png" id="2_myfut"]
[ext_resource type="PackedScene" uid="uid://cxeceweo8851j" path="res://src/stages/game/dyad_game/ui/player/animated_answer.tscn" id="2_ufdwb"]
[ext_resource type="Texture2D" uid="uid://dkb5gktxterij" path="res://assets/gfx/entities/room.png" id="3_6mppa"]
[ext_resource type="AudioStream" uid="uid://c5bmxpn5vs01j" path="res://assets/sfx/sounds/anim/glug_1_short.ogg" id="6_ub5mg"]
[ext_resource type="AudioStream" uid="uid://b2l5e6j4d0p8c" path="res://assets/sfx/sounds/anim/Earth3.ogg" id="7_iu601"]
[ext_resource type="Texture2D" uid="uid://cosb6rt24bnms" path="res://assets/gfx/entities/cop.png" id="8_g5gkv"]

[sub_resource type="Animation" id="Animation_ydp3x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_5ht5u"]
resource_name = "default"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(3, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_epdog"]
_data = {
&"RESET": SubResource("Animation_ydp3x"),
&"default": SubResource("Animation_5ht5u")
}

[sub_resource type="Animation" id="Animation_wsml6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cop:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_c4gd4"]
resource_name = "drink_slam"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cop:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.4, 1.8, 2.2, 2.6, 3, 3.4, 4, 4.2, 4.8, 4.9, 5, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(2, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(8, 1), Vector2i(8, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.2, 2, 2.8, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"_play_drink_sound"
}, {
"args": [],
"method": &"_play_drink_sound"
}, {
"args": [],
"method": &"_play_drink_sound"
}, {
"args": [],
"method": &"_play_slam_sound"
}]
}

[sub_resource type="Animation" id="Animation_0r7p7"]
resource_name = "sit"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cop:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(3, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xty81"]
_data = {
&"RESET": SubResource("Animation_wsml6"),
&"drink_slam": SubResource("Animation_c4gd4"),
&"sit": SubResource("Animation_0r7p7")
}

[node name="PlayerUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_00vx3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="Answer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_vertical = 4

[node name="Control" type="Control" parent="VBoxContainer/Answer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Answer" parent="VBoxContainer/Answer/Control" instance=ExtResource("2_ufdwb")]
unique_name_in_owner = true

[node name="Graphics" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(192, 192)
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="VBoxContainer/Graphics"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Node2D" type="Node2D" parent="VBoxContainer/Graphics/Control"]
scale = Vector2(2, 2)

[node name="Lamp" type="Sprite2D" parent="VBoxContainer/Graphics/Control/Node2D"]
texture = ExtResource("3_6mppa")
region_enabled = true
region_rect = Rect2(0, 0, 128, 128)

[node name="Player" type="Sprite2D" parent="VBoxContainer/Graphics/Control/Node2D"]
unique_name_in_owner = true
position = Vector2(-28, 32)
texture = ExtResource("2_myfut")
hframes = 4
vframes = 2

[node name="Cop" type="Sprite2D" parent="VBoxContainer/Graphics/Control/Node2D"]
position = Vector2(24, 32)
texture = ExtResource("8_g5gkv")
hframes = 10
vframes = 2

[node name="Table" type="Sprite2D" parent="VBoxContainer/Graphics/Control/Node2D"]
texture = ExtResource("3_6mppa")
region_enabled = true
region_rect = Rect2(0, 128, 128, 128)

[node name="AnimPlayer" type="AnimationPlayer" parent="VBoxContainer/Graphics/Control/Node2D"]
libraries = {
"": SubResource("AnimationLibrary_epdog")
}
autoplay = "default"

[node name="AnimCop" type="AnimationPlayer" parent="VBoxContainer/Graphics/Control/Node2D"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_xty81")
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"MainPanel"

[node name="Identifier" type="Label" parent="VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderLarge"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DrinkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ub5mg")

[node name="SlamSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_iu601")
